# awaken

./: .gitignore  Cargo.toml  FOLLOWUPS.md  Makefile  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rubix/: .gitignore  CHANGELOG.md  Cargo.toml  FOLLOWUPS.md  Makefile  STACK-DEISGN.md  STATUS.md  TEST-STATUS.md  drivers.json
rubix-old/: .gitignore  Cargo.toml  drivers.json
rubix-old/crates/rubix-core/src/: change.rs  entity_tag.rs  error.rs  priority.rs  tags.rs  variable.rs
rubix-old/crates/rubix-datasource/: Cargo.toml
rubix-old/crates/rubix-datasource/src/: error.rs  lib.rs
rubix-old/crates/rubix-datasource/tests/: live_postgres.rs
rubix-old/crates/rubix-driver/: Cargo.toml
rubix-old/crates/rubix-driver-sim/: Cargo.toml
rubix-old/crates/rubix-driver-sim/src/: config.rs  main.rs  simulate.rs  write.rs
rubix-old/crates/rubix-driver-sim/tests/: supervised.rs
rubix-old/crates/rubix-driver/src/: error.rs  lib.rs
rubix-old/crates/rubix-flow/: Cargo.toml
rubix-old/crates/rubix-flow/src/: lib.rs  port.rs
rubix-old/crates/rubix-flow/tests/: board.rs  persistent_network_spike.rs
rubix-old/crates/rubix-prefs/src/: lib.rs  series.rs
rubix-old/crates/rubix-query/: Cargo.toml
rubix-old/crates/rubix-query/src/: lib.rs
rubix-old/crates/rubix-query/tests/: his_tier.rs  query.rs  rollup.rs  scoped.rs  time_macros.rs  variables.rs
rubix-old/crates/rubix-rules/: Cargo.toml
rubix-old/crates/rubix-rules/src/: error.rs  lib.rs  params.rs  result.rs  severity.rs
rubix-old/crates/rubix-rules/tests/: compose_budget.rs  compose_guard.rs  error_surface.rs  frame_compute.rs  frame_filter.rs  frame_head.rs  frame_lag.rs  frame_resample.rs  frame_select.rs  frame_zscore.rs  result_severity.rs  run_run_rule.rs  store_memory.rs
rubix-old/crates/rubix-server/: Cargo.toml
rubix-old/crates/rubix-server/src/: error.rs  lib.rs
rubix-old/crates/rubix-server/tests/: api.rs  change_ledger.rs  migrate.rs  pg_query.rs
rubix-old/crates/rubix-tools/: Cargo.toml
rubix-old/crates/rubix-tools/src/: lib.rs  prelude.rs  scope.rs
rubix-old/crates/rubix-tools/tests/: write_point.rs
rubix-old/docs/design/: SCOPE.md  audit-and-undo.md  authz-rbac.md  datasources.md  lmnr-borrow.md  page-context-and-nav.md  rules-engine.md  time-range-and-refresh.md  variables-and-templating.md
rubix-old/testing/: .gitignore
rubix-old/testing/docs/: README.md  TODO.md
rubix-old/testing/docs/00_setup/: SIM_DRIVER.md  STACK.md
rubix-old/testing/docs/features/: AI_TOOLS_AND_AGENT.md  AUTHZ_RBAC.md  BOARDS_REFLOW.md  DASHBOARD.md  DATASOURCE.md  DRIVER_SUPERVISOR.md  ENTITY_CRUD_AND_TENANCY.md  POINTS_PRIORITY_ARRAY.md  QUERY_AND_ROLLUP.md  RULES_ENGINE.md  ZENOH_BUS.md
rubix-old/testing/docs/feedback-loop/: CAPTURE.md  FIX_LOOP.md  README.md
rubix-old/testing/docs/reference/: API_CHEATSHEET.md  ARCHITECTURE.md
rubix-old/testing/docs/scenarios/: README.md
rubix-old/ui/: README.md  index.html  pnpm-lock.yaml  vite.config.ts  vitest.unit.config.ts
rubix-old/ui-demo/rubix-ui/: app.jsx  builder.jsx  chrome.jsx  dashboard.jsx  flow.jsx  index.html  points.jsx  primitives.jsx  sparks.jsx  widgets.jsx
rubix-old/ui/.tanstack/tmp/: 038cf1d3-99aa99d283d7e5586e6ff48b54d96618
rubix-old/ui/src/: main.tsx
rubix-old/ui/src/api/: client.ts  client.unit.test.ts  hooks.ts  keyexpr.ts  keys.ts  stream.ts  stream.unit.test.ts  tags.ts  tags.unit.test.ts  wire-contract.unit.test.ts
rubix-old/ui/src/components/: command-menu.tsx  profile-dropdown.tsx  sign-out-dialog.test.tsx  sign-out-dialog.tsx
rubix-old/ui/src/config/: fonts.ts
rubix-old/ui/src/context/: scope-provider.tsx  search-provider.test.tsx  theme-provider.tsx
rubix/crates/rubix-agent/: Cargo.toml
rubix/crates/rubix-blob/: Cargo.toml
rubix/crates/rubix-bus/: Cargo.toml  README.md
rubix/crates/rubix-core/: Cargo.toml  README.md
rubix/crates/rubix-datasource/: Cargo.toml  README.md
rubix/crates/rubix-driver-sim/: Cargo.toml
rubix/crates/rubix-ext/: Cargo.toml  README.md
rubix/crates/rubix-flow/: Cargo.toml
rubix/crates/rubix-gate/: Cargo.toml  README.md
rubix/crates/rubix-ingest/: Cargo.toml  README.md
rubix/crates/rubix-prefs/: Cargo.toml  README.md
rubix/crates/rubix-query/: Cargo.toml  README.md
rubix/crates/rubix-rules/: Cargo.toml  README.md
rubix/crates/rubix-server/: Cargo.toml  README.md
rubix/crates/rubix-store/: Cargo.toml  README.md
rubix/crates/rubix-sync/: Cargo.toml
rubix/crates/rubix-tools/: Cargo.toml
rubix/crates/rubix-trace/: Cargo.toml  README.md
rubix/doc-site/: .gitignore  DEPLOY.md  README.md  VERSIONING.md  next.config.mjs  package.json
rubix/doc-site/app/: globals.css  layout.jsx
rubix/doc-site/components/: api-explorer.jsx
rubix/doc-site/content/: _meta.js  get-started.mdx  index.mdx
rubix/doc-site/scripts/: build-search-index.mjs  generate-openapi.mjs  sync-changelog.mjs
rubix/docs/: FILE-LAYOUT.md  SCOPE.md
rubix/docs/design/: ADMIN-API.md  AGENT.md  BACKEND-COLLECTIONS.md  BULK-AND-JOBS.md  CONTROL-ENGINE.md  DASHBOARDS-SCOPE.md  EXTENSION-RUNTIME.md  FLEET-AND-IDENTITY.md  HOOKS-AND-FILES.md  LAMINAR-BORROW.md  PAGE-CONTEXT-AND-NAV.md  READINGS-TIMESERIES.md  RULES-ENGINE.md  VARIABLES-AND-TEMPLATING.md  crud-and-tenancy.md
rubix/docs/sessions/: STATUS.md  TODOs.md  WS-01.md  WS-02.md  WS-03.md  WS-04.md  WS-05.md  WS-06.md  WS-07.md  WS-08.md  WS-09.md  WS-10.md  WS-11.md  WS-12.md  WS-13.md  WS-14.md  WS-15.md  WS-16.md  _ORCHESTRATION.md  install-cron.sh  loop-tick.sh
rubix/docs/testing/: .gitignore  BUILD.md  QUICKSTART.md  README.md
rubix/scripts/: check-file-size.sh
rubix/testing/docs/: README.md  TODO.md
rubix/ui/: .gitignore  FILE-LAYOUT.md  README.md  REDESIGN.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.unit.config.ts
rubix/ui-demo/rubix-ui/: command.jsx  data.jsx  styles.css
rubix/ui/e2e/: connect.spec.ts
rubix/ui/scripts/: screenshot.mjs
rubix/ui/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  router.tsx
(+1923 files in other folders)
