[workspace]
resolver = "2"
members = ["crates/rubix-core", "crates/rubix-driver", "crates/rubix-driver-sim", "crates/rubix-flow", "crates/rubix-query", "crates/rubix-server", "crates/rubix-tools"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
rubix-core = { path = "crates/rubix-core" }
rubix-driver = { path = "crates/rubix-driver" }
rubix-flow = { path = "crates/rubix-flow" }
rubix-query = { path = "crates/rubix-query" }
rubix-tools = { path = "crates/rubix-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
rusqlite = { version = "0.37", features = ["bundled", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
postgres = "0.19"
r2d2_postgres = "0.18"
anyhow = "1"
zenoh = "1"
futures = "0.3"
bytes = "1"
datafusion = "53"
async-trait = "0.1"
tempfile = "3"
reflow_network = "0.2"
reflow_actor = "0.2"
reflow_actor_macro = "0.2"
awaken-runtime-contract = "0.6"
awaken-runtime = "0.6"
schemars = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
