[package]
name = "rubix-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Standalone rule-evaluation library: sandboxed Rhai scripts that turn queried
# rows into findings over a DataFusion-backed vectorized engine. Deliberately
# depends on no other rubix crate (rubix-core, rubix-flow, rubix-query,
# rubix-datasource, server); the integrating session wires it in.

[dependencies]
datafusion = { workspace = true }
rhai = { version = "1.25", features = ["sync"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
datafusion = { workspace = true }

[lints]
workspace = true
