[package]
name = "rubix-core"
description = "Rubix BMS domain model: sites, equips, points, tags, priority arrays, findings"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
utoipa.workspace = true

[lints]
workspace = true
