[package]
name = "rubix-flow"
description = "Rubix reflow actors: custom nodes for point read/write, cur subscribe, history query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rubix-core.workspace = true
rubix-rules.workspace = true
reflow_network.workspace = true
reflow_actor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true }
parking_lot = "0.12"
flume = "0.11"

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
rubix-rules.workspace = true

[lints]
workspace = true
