[package]
name = "rubix-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rubix-core = { workspace = true }
rubix-store = { workspace = true }
rubix-gate = { workspace = true }
chrono = { workspace = true }
datafusion = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
datafusion = { workspace = true }
rubix-core = { workspace = true }
rubix-gate = { workspace = true }
rubix-store = { workspace = true }
rubix-trace = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "query_run"
path = "tests/query/run_test.rs"

[[test]]
name = "query_guard"
path = "tests/query/guard_test.rs"

[[test]]
name = "query_authorize"
path = "tests/query/authorize_test.rs"

[[test]]
name = "query_trace_summary"
path = "tests/query/trace_summary_test.rs"

[[test]]
name = "query_time_scope"
path = "tests/query/time_scope_test.rs"

[[test]]
name = "query_context_cache"
path = "tests/query/context_cache_test.rs"

[[test]]
name = "aggregate_rollup"
path = "tests/aggregate/rollup_test.rs"

[[test]]
name = "search_nearest"
path = "tests/search/nearest_test.rs"
