[package]
name = "rubix-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rubix-core = { workspace = true }
rubix-gate = { workspace = true }
rubix-bus = { workspace = true }
rubix-trace = { workspace = true }
rubix-query = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rubix-store = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "evaluate_run"
path = "tests/evaluate/run_test.rs"

[[test]]
name = "evaluate_compose"
path = "tests/evaluate/compose_test.rs"

[[test]]
name = "evaluate_record"
path = "tests/evaluate/record_test.rs"

[[test]]
name = "evaluate_span"
path = "tests/evaluate/span_test.rs"
