[package]
name = "rubix-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["edge"]
# Deployment profiles compiled into the single binary (WS-14, STACK-DEISGN.md
# "Edge and cloud profiles"). At least one must be enabled — the `profile` module
# raises a `compile_error!` if neither is. `RUBIX_PROFILE` then selects among the
# compiled-in profiles at boot.
#
# `edge` (default): single SurrealDB namespace, auth not required, sync off, no
# multi-tenancy code path.
edge = []
# `cloud`: namespace-per-tenant, auth required, sync on. Cloud requires the
# Postgres backend (WS-10, a cloud-only connector), so it pulls in `postgres`;
# the boot path fails closed if a cloud-required backend is absent from the build.
# It also turns on the agent's cloud brain (Rig/OpenAI) so `POST /agent/ask`
# answers with the LLM; the edge build carries no cloud provider and that route
# falls back to a grounded, model-free answer (AGENT.md, open question 1).
cloud = ["postgres", "rubix-agent/cloud"]
# Compile the Postgres datasource connector into the control plane so a
# `POST /datasources` with `"kind":"postgres"` can register a live Postgres
# source. Off by default — the edge build carries no Postgres backend and the
# control plane refuses a postgres kind with `415` (STACK-DEISGN.md, "Edge is the
# default build"; the connector fails closed when the feature is absent).
postgres = ["rubix-datasource/postgres"]

[[bin]]
name = "rubix-server"
path = "src/main.rs"

[[test]]
name = "http_health"
path = "tests/http/health_test.rs"

[[test]]
name = "http_auth"
path = "tests/http/auth_test.rs"

[[test]]
name = "http_records_crud"
path = "tests/http/records/crud_test.rs"

[[test]]
name = "http_readings_append_read"
path = "tests/http/readings/append_read_test.rs"

[[test]]
name = "http_records_collection"
path = "tests/http/records/collection_test.rs"

[[test]]
name = "http_rules_crud"
path = "tests/http/rules/crud_test.rs"

[[test]]
name = "http_query_batch"
path = "tests/http/query/batch_test.rs"

[[test]]
name = "http_query_variables"
path = "tests/http/query/variables_test.rs"

[[test]]
name = "http_prefs"
path = "tests/http/prefs/prefs_test.rs"

[[test]]
name = "http_admin_crud"
path = "tests/http/admin/crud_test.rs"

[[test]]
name = "http_extensions_admin"
path = "tests/http/extensions/admin_test.rs"

[[test]]
name = "http_admin_tenant_cloud"
path = "tests/http/admin/tenant_cloud_test.rs"

[[test]]
name = "http_admin_teams"
path = "tests/http/admin/teams_test.rs"

[[test]]
name = "ws_bridge"
path = "tests/ws/bridge_test.rs"

[[test]]
name = "ws_jobs"
path = "tests/ws/jobs_test.rs"

[[test]]
name = "http_bulk_jobs"
path = "tests/http/bulk/jobs_test.rs"

[[test]]
name = "http_records_bulk"
path = "tests/http/records/bulk_test.rs"

[[test]]
name = "hooks_dispatch"
path = "tests/hooks/dispatch_test.rs"

[[test]]
name = "http_files"
path = "tests/http/files/files_test.rs"

[[test]]
name = "openapi_serve"
path = "tests/openapi/serve_test.rs"

[[test]]
name = "profile_select"
path = "tests/profile/select_test.rs"

[[test]]
name = "profile_edge_boot"
path = "tests/profile/edge_boot_test.rs"

[[test]]
name = "profile_cloud_boot"
path = "tests/profile/cloud_boot_test.rs"

[[test]]
name = "profile_fail_closed"
path = "tests/profile/fail_closed_test.rs"

[dependencies]
rubix-core = { workspace = true }
rubix-store = { workspace = true }
rubix-gate = { workspace = true }
rubix-blob = { workspace = true }
rubix-bus = { workspace = true }
rubix-query = { workspace = true }
rubix-rules = { workspace = true }
rubix-trace = { workspace = true }
rubix-datasource = { workspace = true }
rubix-prefs = { workspace = true }
rubix-agent = { workspace = true }
rubix-ext = { workspace = true }
arrow-json = "58"
async-trait = "0.1"
axum = { workspace = true, features = ["ws", "query", "multipart"] }
chrono = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
surrealdb = { workspace = true }
tokio-tungstenite = "0.24"
futures = { workspace = true }
