[package]
name = "rubix-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rubix-core = { workspace = true }
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rubix-store = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "data_ship_dedup"
path = "tests/data/ship_dedup_test.rs"

[[test]]
name = "data_order"
path = "tests/data/order_test.rs"

[[test]]
name = "config_ownership"
path = "tests/config/ownership_test.rs"

[[test]]
name = "config_lww_tiebreak"
path = "tests/config/lww_tiebreak_test.rs"
